<resources>
    <string name="app_name">ToDo</string>
    <string name="to_do_list">To Do List</string>
    <string name="language">Language</string>
    <string name="mode">Mode</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="select_time">Select Time</string>
    <string name="select_date">Select Date</string>
    <string name="add_new_task">Add new Task</string>
    <string name="edit_text">Edit Text</string>
    <string name="save_changes">Save Changes</string>
</resources>